--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -13,7 +13,7 @@
 org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 
 # When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
+# This option should only be used with decoupled projects. More details, 
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
@@ -30,7 +30,7 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # Use this property to enable support to the new architecture.
 # This will allow you to use TurboModules and the Fabric render in
 # your application. You should enable this flag either if you want
-# to write custom TurboModules/Fabric components OR use libraries that
+# to write custom TurboModules/Fabric components OR use libraries thatvisit
 # are providing them.
 newArchEnabled=true
 
