--- a/ios/Authorization/Info.plist
+++ b/ios/Authorization/Info.plist
@@ -37,6 +37,10 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
+	<key>NSCameraUsageDescription</key>
+	<string>Your message to the user when requesting access to the camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Your message to the user when requesting access to the photo library</string>
 	<array>
 		<string>arm64</string>
 	</array>
