--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@firebase/analytics": "^0.10.10",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/cli-doctor": "^15.1.2",
+    "@react-native-firebase/analytics": "^21.6.1",
+    "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/auth": "^21.6.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
     "axios": "^1.7.8",
+    "firebase": "^11.1.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-image-picker": "^7.2.2",
+    "react-native-maps": "^1.20.1",
+    "react-native-permissions": "^5.2.1",
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
@@ -34,7 +43,7 @@
     "@react-native/eslint-config": "0.76.3",
     "@react-native/metro-config": "0.76.3",
     "@react-native/typescript-config": "0.76.3",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.16",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
